--- a/WebContent/css/styles.css
+++ b/WebContent/css/styles.css
@@ -1,9 +1,11 @@
-@import url(http://fonts.useso.com/css?family=Source+Sans+Pro:200,300);
+/* @import url(http://fonts.useso.com/css?family=Source+Sans+Pro:200,300); */
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-weight: 300;
+  font-family: "Microsoft YaHei";
 }
 body {
   font-family: 'Source Sans Pro', sans-serif;
