--- a/WebContent/css/styles.css
+++ b/WebContent/css/styles.css
@@ -7,6 +7,23 @@
   font-weight: 300;
   font-family: "Microsoft YaHei";
 }
+a:link {
+	text-decoration: none;
+}
+a:visited {
+	text-decoration: none;
+}
+a:hover {
+	text-decoration: none;
+}
+a:active {
+	text-decoration: none;
+}
+
+a {
+	color:#ffffff;
+}
+
 body {
   font-family: 'Source Sans Pro', sans-serif;
   color: white;
